--- a/build.yaml
+++ b/build.yaml
@@ -59,39 +59,13 @@ include:
     # nice_nano_v2 + nice_epaper
   - board: nice_nano_v2
     shield: corne_left nice_view_adapter nice_epaper
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_View\"
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"CorneBT\"
     artifact-name: nice_corne_left_view
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_epaper
     artifact-name: nice_corne_right_view
-
-    # peripheral_left + nice_nano_v2 + nice_epaper
-  - board: nice_nano_v2
-    shield: corne_left_peripheral nice_view_adapter nice_epaper
-    artifact-name: nice_corne_left_peripheral_view
-
-    # peripheral_left + puchi_ble_v1 + nice_epaper
-  - board: puchi_ble_v1
-    shield: corne_left_peripheral nice_view_adapter nice_epaper
-    artifact-name: puchi_corne_left_peripheral_view
     ### nice_view END ###
-
-    ### nice_oled START ###
-    # nice_nano_v2 + nice_oled
-  - board: nice_nano_v2
-    shield: corne_left nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_Oled\"
-    artifact-name: nice_corne_left_oled
-    snippet: studio-rpc-usb-uart
-  - board: nice_nano_v2
-    shield: corne_right nice_oled
-    artifact-name: nice_corne_right_oled
-
-    # peripheral_left + nice_nano_v2 + nice_oled
-  - board: nice_nano_v2
-    shield: corne_left_peripheral nice_oled
-    artifact-name: nice_corne_left_peripheral_oled
     
   ### CORNE END ###
 
@@ -99,10 +73,4 @@ include:
   - board: nice_nano_v2
     shield: settings_reset
     artifact-name: nice_settings_reset
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
-    artifact-name: xiao_settings_reset
-  - board: puchi_ble_v1
-    shield: settings_reset
-    artifact-name: puchi_settings_reset
   ### SETTINGS_RESET END ###
