--- a/config/corne.conf
+++ b/config/corne.conf
@@ -34,17 +34,19 @@
 # CONFIG_ZMK_KEYBOARD_NAME="Puchi Corne Oled"
 
 ### Boost Bluetooth TX power, also make Bluetooth stronger
+CONFIG_ZMK_BLE=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=n
 # Tune bluetooth profiles for quick select
-# CONFIG_BT_MAX_CONN=3
+# CONFIG_BT_MAX_CONN=1
 # Uncomment the following line if you facing issue on win 11 connection
 # Enables a combination of settings that are planned to be default in future
 # versions of ZMK to improve connection stability. This includes changes to
 # timing on BLE pairing initiation, restores use of the updated/new LLCP
 # implementation, and disables 2M PHY support.
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=n
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=y
 
 ### POWER OPTIONS
 CONFIG_ZMK_SLEEP=y
@@ -98,8 +100,8 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 ### OLED DISPLAY
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
 # esto creo que ya no es necesario
 # CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
