--- a/config/corne.conf
+++ b/config/corne.conf
@@ -36,7 +36,7 @@
 ### Boost Bluetooth TX power, also make Bluetooth stronger
 CONFIG_ZMK_BLE=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=n
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 # Tune bluetooth profiles for quick select
 # CONFIG_BT_MAX_CONN=1
 # Uncomment the following line if you facing issue on win 11 connection
@@ -44,9 +44,9 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=n
 # versions of ZMK to improve connection stability. This includes changes to
 # timing on BLE pairing initiation, restores use of the updated/new LLCP
 # implementation, and disables 2M PHY support.
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=n
+# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=n
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=y
+# CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=y
 
 ### POWER OPTIONS
 CONFIG_ZMK_SLEEP=y
