--- a/build.yaml
+++ b/build.yaml
@@ -65,7 +65,20 @@ include:
   - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_epaper
     artifact-name: nice_corne_right_view
+
+    # peripheral_left + nice_nano_v2 + nice_epaper
+  - board: nice_nano_v2
+    shield: corne_left_peripheral nice_view_adapter nice_epaper
+    artifact-name: nice_corne_left_peripheral_view
     ### nice_view END ###
+
+    # nice_nano_v2 dongle
+  - board: nice_nano_v2
+    shield: corne_dongle_pro_micro
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"CorneDongle\"
+    artifact-name: nice_corne_dongle_pro_micro
+    snippet: studio-rpc-usb-uart
+    # snippet: zmk-usb-logging
     
   ### CORNE END ###
 
