--- a/config/corne.conf
+++ b/config/corne.conf
@@ -100,8 +100,8 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 ### OLED DISPLAY
-CONFIG_ZMK_DISPLAY=n
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=n
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 # esto creo que ya no es necesario
 # CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
