--- a/build.yaml
+++ b/build.yaml
@@ -63,7 +63,7 @@ include:
     artifact-name: nice_corne_left_view
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
-    shield: corne_righ
+    shield: corne_right
     artifact-name: nice_corne_right_view
 
     # peripheral_left + nice_nano_v2 + nice_epaper
