--- a/build.yaml
+++ b/build.yaml
@@ -56,9 +56,9 @@ include:
 
   ### CORNE START ###
     ### nice_view START ###
-    # nice_nano_v2 + nice_epaper
+    # nice_nano_v2 + nice_view
   - board: nice_nano_v2
-    shield: corne_left nice_view_adapter nice_epaper
+    shield: corne_left nice_view_adapter nice_view
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"CorneBT\"
     artifact-name: nice_corne_left_view
     snippet: studio-rpc-usb-uart
@@ -66,9 +66,9 @@ include:
     shield: corne_right
     artifact-name: nice_corne_right_view
 
-    # peripheral_left + nice_nano_v2 + nice_epaper
+    # peripheral_left + nice_nano_v2 + nice_view
   - board: nice_nano_v2
-    shield: corne_left_peripheral nice_view_adapter nice_epaper
+    shield: corne_left_peripheral nice_view_adapter nice_view
     artifact-name: nice_corne_left_peripheral_view
     ### nice_view END ###
 
