--- a/build.yaml
+++ b/build.yaml
@@ -58,7 +58,7 @@ include:
     ### nice_view START ###
     # nice_nano_v2 + nice_view (native 5-pin support, no adapter needed)
   - board: nice_nano_v2
-    shield: corne_left nice_view_adapter nice_view_gem
+    shield: corne_left nice_view_gem
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"CorneBT\"
     artifact-name: nice_corne_left_view
     snippet: studio-rpc-usb-uart
@@ -68,7 +68,7 @@ include:
 
     # peripheral_left + nice_nano_v2 + nice_view (native support)
   - board: nice_nano_v2
-    shield: corne_left_peripheral nice_view_adapter nice_view_gem
+    shield: corne_left_peripheral nice_view_gem
     artifact-name: nice_corne_left_peripheral_view
     ### nice_view END ###
 
