--- a/boards/shields/corne/corne_dongle_pro_micro.conf
+++ b/boards/shields/corne/corne_dongle_pro_micro.conf
@@ -17,7 +17,7 @@ CONFIG_BT_MAX_CONN=5
 CONFIG_BT_MAX_PAIRED=5
 
 ### DISPLAY DONGLE OPTIONS
-CONFIG_ZMK_DISPLAY=n
+CONFIG_ZMK_DISPLAY=y
 CONFIG_BT_BAS=n
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
